# pombo-correio

./: .gitignore  Cargo.toml  LICENSE  Makefile
docker/: Dockerfile
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: deployment.yaml  hpa.yaml  hub_configmap.yaml
src/: command_line.rs  main.rs
src/entities/: mod.rs  sender_response.rs
src/entities/message_destinatary/: email_destinarary.rs  mod.rs  slack_destinatary.rs
src/notification_hub/: email_client.rs  messages.rs  mod.rs  slack_client.rs
src/server/: mod.rs
src/server/entities/: email_message.rs  mod.rs  request_payload.rs  send_message_payload.rs  send_message_response.rs
src/server/routes/: health.rs  mod.rs  send_message.rs
