[package]
name = "pombo-correio-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
lettre = { version = "0.10", features = ["rustls", "smtp-transport"] }
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0.58"
clap = { version = "4.1.7", features = ["derive", "color", "suggestions", "env", "unicode"] }

tokio = { version = "1", default-features=false, features = ["macros"] }
actix-web = { version = "4", features = ["rustls"] }
serde_json = "1.0.94"

reqwest = { version = "0.11.14", features = ["json", "rustls-tls", "gzip"] }
serde_yaml = "0.9.19"
gethostname = "0.4.1"
